--- a/src/main/resources/templates/exam02-result2.html
+++ b/src/main/resources/templates/exam02-result2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>足し算結果画面</h3>
-<span th:text="${session.num1}"></span>+<span th:text="${session.num2}"></span>=<span th:text="${session.ans}"></span><br>
+<span th:text="${session.num1}"></span>+<span th:text="${session.num2}"></span>=<span th:text="${session.answer}"></span><br>
 
 
 </body>
